--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,21 @@
   justify-content: center;
   align-items: center;
 }
+
+.noise {
+  position: fixed;
+  inset: -200%;
+  background-image: url("/images/noise.png");
+  opacity: 4%;
+  pointer-events: none;
+  animation: shift 0.35s linear infinite both;
+}
+
+@keyframes shift {
+  0% {
+    transform: translateX(10%) translateY(10%);
+  }
+  100% {
+    transform: translateX(-10%) translateY(-10%);
+  }
+}
