--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
   opacity: 4%;
   pointer-events: none;
   animation: shift 0.35s linear infinite both;
+  z-index: 9999;
 }
 
 @keyframes shift {
