update text selection color and bg

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,15 @@
 ::-webkit-scrollbar-track {
   background: transparent;
 }
+
+/* SELECTION COLORS */
+::-moz-selection {
+  /* Code for Firefox */
+  color: #111;
+  background: #b8b8ff;
+}
+
+::selection {
+  color: #111;
+  background: #b8b8ff;
+}
